--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,18 @@
             <version>${dl4j.version}</version>
         </dependency>
 
+        <!-- rl4j  -->
+        <dependency>
+            <groupId>org.deeplearning4j</groupId>
+            <artifactId>rl4j-core</artifactId>
+            <version>${rl4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.deeplearning4j</groupId>
+            <artifactId>rl4j-ale</artifactId>
+            <version>${rl4j.version}</version>
+        </dependency>
+
     </dependencies>
 
     <build>
